<resources>
    <string name="app_name" translatable="false">Agendaí</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="label_sign_in_with_facebook">Entrar com o facebook</string>
    <string name="label_sign_in_with_google">Entrar com o Google</string>
    <string name="label_consults_exams">Consultas | Exames</string>
    <string name="label_already_account">Já tenho uma conta</string>
    <string name="label_sign_in_one_tap">Logar com um toque</string>
    <string name="label_sign_in">Entrar</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Senha</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="label_start_now">Começar agora</string>
    <string name="label_title_intro_one">Somos o seu app de agendamentos médicos!</string>
    <string name="label_title_intro_two">Lembramos você!</string>
    <string name="label_title_intro_three">Pague pelo app!</string>
    <string name="label_subtitle_intro_one">Pesquise por médicos e clinicas e agende seus exames e consultas de maneira fácil e rápida.</string>
    <string name="label_subtitle_intro_two">Fique tranquilo, Lembramos você das datas das suas consultas e exames.</string>
    <string name="label_subtitle_intro_three">Pague pelo app  e receba desconstos. Ou informe os dados do seu plano de sáude.</string>
</resources>
