<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="br.com.mobway.agendai.fragments.LoginActivityFragment"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_big"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="114dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelAppName"
        style="@style/StyleTextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLine" />

    <TextView
        android:id="@+id/labelAppSubtitle"
        style="@style/StyleTextViewSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/label_consults_exams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelAppName" />

    <Button
        android:id="@+id/buttonFacebook"
        style="@style/ButtonDark"
        android:layout_width="@dimen/button_width_big"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@drawable/bg_button_facebook"
        android:drawableStart="@drawable/ic_facebook"
        android:paddingEnd="@dimen/margin_normal"
        android:paddingStart="@dimen/margin_normal"
        android:text="@string/label_sign_in_with_facebook"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelAppSubtitle" />

    <Button
        android:id="@+id/buttonGoogle"
        style="@style/ButtonLight"
        android:layout_width="@dimen/button_width_big"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@drawable/bg_button_google"
        android:drawableStart="@drawable/ic_google"
        android:paddingEnd="@dimen/margin_normal"
        android:paddingStart="@dimen/margin_normal"
        android:text="@string/label_sign_in_with_google"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFacebook" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/containerSignInWithEmail"
        android:layout_width="@dimen/input_width_normal"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_small"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoogle">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/containerInputLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_email"
            app:hintTextAppearance="@style/TextHintLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ample_soft_normal"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/font_normal" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/containerInputPwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            app:hintTextAppearance="@style/TextHintLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerInputLogin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ample_soft_normal"
                android:inputType="textPassword"
                android:textSize="@dimen/font_normal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonSignIn"
            style="@style/ButtonDark"
            android:layout_width="@dimen/button_width_big"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/bg_button_primary"
            android:paddingEnd="@dimen/margin_normal"
            android:paddingStart="@dimen/margin_normal"
            android:text="@string/label_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerInputPwd" />


    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/buttonAlreadyAccount"
        style="@style/StyleTextViewSubtitle"
        android:layout_width="@dimen/button_width_big"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/label_already_account"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/buttonSignInOneTap"
        style="@style/StyleTextViewSubtitle"
        android:layout_width="@dimen/button_width_big"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:drawableStart="@drawable/ic_keyboard_arrow_left"
        android:gravity="center"
        android:paddingEnd="@dimen/margin_normal"
        android:paddingStart="@dimen/margin_normal"
        android:text="@string/label_sign_in_one_tap"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>